# CoDeSEG

./: README.md
code_c++/CoDeSEG/: CMakeLists.txt  main.cpp
code_c++/CoDeSEG/lib/: CoDeSEG.cpp  CoDeSEG.h  DynamicArray.h  Utility.cpp  Utility.h
code_c++/fox/: Lazyfox
code_c++/fox/notebooks/: .BenchmarkRun.py.swp  BenchmarkRun.py  run.py
code_py/: CoDeSEG.py  DER_impt.py  FLPA_impt.py  LFR_con.py  NCG.py  SLPA.py  bigclam.py  comm_utils.py  exp_fox.py  lazy_fox.py  leiden.py  louvain.py  onmi.py  tweet_preprocess.py  wiki_to_undirect.py  xmeasures.py
dataset/lfr_overlap/: lfr_graph.txt  lfr_gt.txt  overlap_lfr_100_1.nmc  overlap_lfr_100_1.nse  overlap_lfr_100_1.nst
